<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Google Map Start -->
    <string name="google_maps_api_key">AIzaSyB-3uEafo0xBZeYXkVzhGTfPISvqgqvNK0</string>
    <!-- Google Map End -->
    
    <!-- Common Start -->
    <string name="app_name">ParkingCam</string>
    <string name="dot">.</string>
    <string name="common_confirm">확인</string>
    <string name="common_start">Start Capture!</string>
    <!-- Common End -->
    
    <!-- Menu Start -->
    <string name="menu_parking_cam">Parking Cam</string>
    <string name="menu_camera_capture">Camera Capture</string>
    <string name="menu_parking_map">Parking Map</string>
    <string name="menu_manual">Manual</string>
    <string name="menu_credits">Credits</string>
    <string name="omenu_settings">Settings</string>
    <string name="omenu_credits">Credits</string>
    <string name="widget_parking">Parking Widget</string>
    <!-- Menu End -->
    
    <!-- Team Value Start -->
    <string name="team_name">Android Team2</string>
    <string name="product_mgr">Product Manager</string>
    <string name="choi_hee_tae">Choi Hee Tae</string>
    <string name="bae_jee_deok">Bae Jee Deok</string>
    <string name="designer">Designer</string>
    <string name="won_jae_hwan">Won Jae Hwan</string>
    <string name="kim_hye_soo">Kim Hye Soo</string>
    <string name="developer">Developer</string>
    <string name="shin_jae_hwan">Shin Jae Hwan</string>
    <string name="park_tae_kyu">Park Tae Kyu</string>
    <!-- Team Value End -->
    
    <!-- ParkingCam Start -->
    <string name="parking_take_picture">촬영</string>
    <string name="icon2">ICON_2</string>
    <string name="icon3">ICON_3</string>
    <string name="icon4">ICON_4</string>
    <string name="icon5">ICON_5</string>
    <string name="icon6">ICON_6</string>
    <string name="icon7">ICON_7</string>
    <string name="icon8">ICON_8</string>
    <!-- ParkingCam End -->

	<!-- CameraCapture Start -->
	<string name="auto_capture">Auto Capture</string>
	<string name="photo_save">Photo Save</string>
	<string name="wait_capture">Wait a seconds</string>
	<string name="camera_again">AGAIN</string>
	<string name="camera_save">SAVE</string>
	<string name="camera_memo">MEMO</string>
	<string name="camera_memo_hint">memo</string>
	<string name="photo_no">등록된 사진이 없습니다.</string> 
	<string name="photo_request_camera_focus">자동 포커스 설정중...</string>
	<string name="photo_request_camera_take_picture">사진 캡쳐중...</string>
	<string name="photo_status_default_msg">캡쳐를 실행하기 위해 카메라 버튼을 누르십시요.</string>
	<string name="photo_upload_dialog_title">업로드중:</string>
	<string name="photo_upload_dialog_message">잠시 기다려주십시오.</string>
	<string name="photo_sd_card_wait">잠시만 기다려주십시요.</string>
    <string name="photo_sd_card_preparing">SD카드 준비중</string>
    <string name="photo_sd_card_unmount">앱을 이용하시려면 SD카드가 필요합니다.</string>
    <!-- CameraCapture End -->
    
    <!-- Manual Start -->
    <string name="manual_1">Manual Page 1</string>
    <string name="manual_2">Manual Page 2</string>
    <string name="manual_3">Manual Page 3</string>
    <string name="manual_start">Start Capture</string>
    <!-- Manual End -->
</resources>
