<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="2dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@color/black" android:orientation="horizontal">
		<!-- <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="right" android:orientation="horizontal">
			<ImageButton	android:id="@+id/ibtClose"
					        android:layout_width="30dp"
					        android:layout_height="30dp"
					        android:layout_gravity="right|center_vertical"
					        android:layout_marginRight="8dp"
					        android:background="@color/transparent"
					        android:src="@drawable/btn_close" />
 		</LinearLayout> -->
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:padding="1dip" android:background="@color/black">		
		<TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="2dip" android:stretchColumns="*">
			<TableRow android:padding="5dip" android:layout_width="fill_parent" android:layout_gravity="center">
				<TableLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="90" android:stretchColumns="*">
					<TableRow>
					    <TextView 	android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="10"/>
					    <Button		android:id="@+id/btnTake"
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="35"
									android:layout_gravity="center_vertical|center_horizontal"
									android:gravity="center_vertical|center_horizontal"
									android:text="@string/parking_take_picture" />
					    <TextView 	android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="10"/>
					    <Button		android:id="@+id/btnIcon2"
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="35"
									android:layout_gravity="center_vertical|center_horizontal"
									android:gravity="center_vertical|center_horizontal"
									android:text="@string/icon2" />
					    <TextView 	android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="10"/>
					</TableRow>
					<TableRow>
					    <TextView 	android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="10"/>
					    <Button		android:id="@+id/btnIcon3"
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="35"
									android:layout_gravity="center_vertical|center_horizontal"
									android:gravity="center_vertical|center_horizontal"
									android:text="@string/icon3" />
					    <TextView 	android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="10"/>
					    <Button		android:id="@+id/btnIcon4"
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="35"
									android:layout_gravity="center_vertical|center_horizontal"
									android:gravity="center_vertical|center_horizontal"
									android:text="@string/icon4" />
					    <TextView 	android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="10"/>
					</TableRow>
					<TableRow>
					    <TextView 	android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="10"/>
					    <Button		android:id="@+id/btnIcon5"
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="35"
									android:layout_gravity="center_vertical|center_horizontal"
									android:gravity="center_vertical|center_horizontal"
									android:text="@string/icon5" />
					    <TextView 	android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="10"/>
					    <Button		android:id="@+id/btnIcon6"
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="35"
									android:layout_gravity="center_vertical|center_horizontal"
									android:gravity="center_vertical|center_horizontal"
									android:text="@string/icon6" />
					    <TextView 	android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="10"/>
					</TableRow>
					<TableRow>
					    <TextView 	android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="10"/>
					    <Button		android:id="@+id/btnIcon7"
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="35"
									android:layout_gravity="center_vertical|center_horizontal"
									android:gravity="center_vertical|center_horizontal"
									android:text="@string/icon7" />
					    <TextView 	android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="10"/>
					    <Button		android:id="@+id/btnIcon8"
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="35"
									android:layout_gravity="center_vertical|center_horizontal"
									android:gravity="center_vertical|center_horizontal"
									android:text="@string/icon8" />
					    <TextView 	android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="10"/>
					</TableRow>
				</TableLayout>
			</TableRow>
		</TableLayout>
	</LinearLayout>
</LinearLayout>