<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<SurfaceView android:id="@+id/surfaceview_preview" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
	    <!-- <android.parkingcam.common.CameraButton
	            android:id="@+id/btnClose"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentEnd="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginRight="22dip"
	            android:layout_marginEnd="22dip"
                android:layout_marginTop="22dip"/> -->

	    <android.parkingcam.common.CameraButton
	            android:id="@+id/btnCamera"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:layout_alignParentBottom="true"
	            android:layout_marginBottom="@dimen/camera_capture_margin"/>
	    	  
  		<LinearLayout	android:id="@+id/llCameraNextMenu" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
	            		android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
      			 		android:background="@color/transparent" android:visibility="invisible">
      		<TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:stretchColumns="*" android:orientation="horizontal">
				<!-- <TableRow android:layout_width="fill_parent" android:layout_height="0dp" android:layout_weight="5">
				    <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
				</TableRow> -->
				<TableRow android:layout_width="fill_parent" android:layout_height="0dp" android:layout_weight="80">
				    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"  android:layout_weight="1" android:layout_gravity="top" android:gravity="center">
				        <EditText	android:id="@+id/etMemo"
				            		android:layout_width="fill_parent"
				            		android:layout_height="wrap_content"
				            		android:layout_marginLeft="@dimen/camera_capture_margin"
				            		android:layout_marginRight="@dimen/camera_capture_margin"
						            android:layout_marginEnd="@dimen/camera_capture_margin"
						            android:layout_marginTop="@dimen/camera_capture_margin"
						            android:layout_marginBottom="@dimen/camera_capture_margin"
						            android:singleLine="false"
						            android:textColor="@color/black"
						            android:hint="@string/camera_memo_hint"/>
				    </LinearLayout>
				</TableRow>
				<TableRow android:layout_width="fill_parent" android:layout_height="0dp" android:layout_weight="5">
				    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"  android:layout_weight="1" android:gravity="end|bottom">
				        <android.parkingcam.common.CameraButton
				            android:id="@+id/btnMap"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:layout_marginRight="@dimen/camera_capture_margin"
				            android:layout_marginEnd="@dimen/camera_capture_margin"
				            android:layout_marginBottom="@dimen/camera_capture_margin"/>
					</LinearLayout>
				</TableRow>
				<TableRow android:layout_width="fill_parent" android:layout_height="0dp" android:layout_weight="1">
				    <LinearLayout android:layout_width="0dp" android:layout_height="120dp" android:layout_weight="50" android:layout_gravity="bottom">
				        <Button	android:id="@+id/btnAgain"
				            	style="@style/Button.Camera"
					            android:layout_width="0dp"
					            android:layout_height="fill_parent"
					            android:layout_weight="1"
					            android:paddingTop="@dimen/camera_capture_padding"
					            android:text="@string/camera_again"
					            android:textSize="18sp"
					            android:textColor="@color/black"
					            android:background="@drawable/btn_camera_again"
					            android:drawableTop="@drawable/icn_camera_car_64"
					            android:hapticFeedbackEnabled="true"/>
			        </LinearLayout>
			        <LinearLayout android:layout_width="0dp" android:layout_height="120dp" android:layout_weight="50" android:layout_gravity="bottom">
				        <Button	android:id="@+id/btnSave"
				            	style="@style/Button.Camera"
					            android:layout_width="0dp"
					            android:layout_height="fill_parent"
					            android:layout_weight="1"
					            android:paddingTop="@dimen/camera_capture_padding"
					            android:text="@string/camera_save"
					            android:background="@drawable/btn_camera_save"
					            android:drawableTop="@drawable/icn_camera_car_64"
					            android:hapticFeedbackEnabled="true"/>
		        	</LinearLayout>
				</TableRow>
			</TableLayout>
		</LinearLayout>	    	    
	</RelativeLayout>
  	<android.parkingcam.camera.CaptureLayout android:id="@+id/clCaptureLayoutView"
      			 android:layout_width="fill_parent" android:layout_height="fill_parent"
      			 android:background="@color/transparent"/>
</FrameLayout>